--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7243,6 +7243,10 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
     - cfgov-cf-enhancements
 */
 
+.grid_column__top-divider {
+  margin-top: 3.75em;
+}
+
 .grid_column__top-divider:before {
   content: "";
   display: block;
