--- a/docs/layout/index.html
+++ b/docs/layout/index.html
@@ -863,6 +863,9 @@
       </div>
       <div class="docs-css">
         <pre class="docs-code"><code data-language="css">@media only all and (max-width: 37.4375em) {
+  .content-l_col__before-divider.content-l_col-1-2 {
+    margin-top: 3.75em;
+  }
   .content-l_col__before-divider.content-l_col-1-2:before {
     content: &quot;&quot;;
     display: block;
@@ -887,6 +890,9 @@
   }
 }
 @media only all and (max-width: 47.9375em) {
+  .content-l_col__before-divider.content-l_col-1-3 {
+    margin-top: 3.75em;
+  }
   .content-l_col__before-divider.content-l_col-1-3:before {
     content: &quot;&quot;;
     display: block;
