--- a/static/css/cf-enhancements.less
+++ b/static/css/cf-enhancements.less
@@ -86,6 +86,7 @@
 */
 
 .grid_column__top-divider {
+    margin-top: unit((@grid_gutter-width * 2) / @base-font-size-px, em);
     &:before {
         content: "";
         display: block;
