--- a/_layouts/header.html
+++ b/_layouts/header.html
@@ -1,53 +1,48 @@
-    <nav class="primary-nav l-wrapper-outer desktop-menu">
-        <div class="">
-            <ul class="primary-nav_top-level-list
-                       list__unstyled
-                       list__horizontal
-                       wrapper
-                       l-wrapper-inner
-                       list-expanding">
-                <li class="list_item list-expanding_list-item">
-                    <a class="list_link list_link__disabled">Consumer Guides</a>
-                </li>
-                <li class="list_item list-expanding_list-item">
-                    <a class="list_link list_link__disabled">Submit a Complaint</a>
-                </li>
-                <li class="list_item list-expanding_list-item">
-                    <a class="list_link list_link__disabled">Data & Research</a>
-                </li>
-                <li class="list_item list-expanding_list-item">
-                    <a class="list_link list_link__disabled">For Industry</a>
-                </li>
-                <li class="list_item list-expanding_list-item">    
-                    <a class="list_link list-expanding_trigger" href="#">About</a>
-                    <div class="primary-nav_subpanel desktop-menu_full-wrapper">
-                        <div class="desktop-menu_full-wrapper_decoration">
-                            <div class="wrapper l-wrapper-inner">
-                                <ul class="list__unstyled
-                                           list__horizontal
-                                           desktop-menu_horizontal-list
-                                           l-unit-container
-                                           list-expanding list-expanding_child-list">
-                                    <li class="list_item list-expanding_list-item">
-                                        <a class="list_link" href="/blog/">Blog</a>
-                                    </li>
-                                    <li class="list_item list-expanding_list-item">
-                                        <a class="list_link" href="/newsroom/">Newsroom</a>
-                                    </li>
-                                    <li class="list_item list-expanding_list-item">
-                                        <a class="list_link" href="/contact-us/">Contact Us</a>
-                                    </li>
-                                    <li class="list_item list-expanding_list-item">
-                                        <a class="list_link" href="/the-bureau/">About the Bureau</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
+    <nav class="primary-nav">
+        <ul class="primary-nav_top-level-list
+                   wrapper
+                   list__unstyled
+                   list__horizontal
+                   list-expanding">
+            <li class="list_item list-expanding_list-item">
+                <a class="list_link list_link__disabled">Consumer Guides</a>
+            </li>
+            <li class="list_item list-expanding_list-item">
+                <a class="list_link list_link__disabled">Submit a Complaint</a>
+            </li>
+            <li class="list_item list-expanding_list-item">
+                <a class="list_link list_link__disabled">Data & Research</a>
+            </li>
+            <li class="list_item list-expanding_list-item">
+                <a class="list_link list_link__disabled">For Industry</a>
+            </li>
+            <li class="list_item list-expanding_list-item">    
+                <a class="list_link list-expanding_trigger" href="#">About</a>
+                <div class="desktop-menu_full-wrapper">
+                    <div class="desktop-menu_full-wrapper_decoration">
+                        <ul class="wrapper
+                                   list__unstyled
+                                   list__horizontal
+                                   desktop-menu_horizontal-list
+                                   list-expanding list-expanding_child-list">
+                            <li class="list_item list-expanding_list-item">
+                                <a class="list_link" href="/blog/">Blog</a>
+                            </li>
+                            <li class="list_item list-expanding_list-item">
+                                <a class="list_link" href="/newsroom/">Newsroom</a>
+                            </li>
+                            <li class="list_item list-expanding_list-item">
+                                <a class="list_link" href="/contact-us/">Contact Us</a>
+                            </li>
+                            <li class="list_item list-expanding_list-item">
+                                <a class="list_link" href="/the-bureau/">About the Bureau</a>
+                            </li>
+                        </ul>
                     </div>
-                </li>
-            </ul>
-        </div>
-    </nav> <!-- END .primary-nav -->
+                </div>
+            </li>
+        </ul><!-- END .primary-nav_top-level-list -->
+    </nav><!-- END .primary-nav -->
 
 </div><!-- END .sliding-nav_nav -->
 
