Update menu icon to use cf-icons

--- a/_layouts/header.html
+++ b/_layouts/header.html
@@ -50,7 +50,10 @@
 
     <header class="header" role="banner">
         <div class="wrapper">
-            <button class="sliding-nav_trigger" id="trigger" href="#">☰</button>
+            <button class="sliding-nav_trigger" id="trigger" href="#">
+                <i class="cf-icon cf-icon-menu"></i>
+                <span class="u-visually-hidden">Menu</span>
+            </button>
             <a href="/">
                 <img class="logo u-js-only"
                      src="/static/img/logo.svg"
