--- a/_layouts/header.html
+++ b/_layouts/header.html
@@ -55,14 +55,14 @@
                 <span class="u-visually-hidden">Menu</span>
             </button>
             <a href="/">
-                <img class="logo u-js-only"
+                <img class="header_logo u-js-only"
                      src="/static/img/logo.svg"
                      onerror="this.onerror=null;this.src='/static/img/logo.png';"
                      alt="Consumer Financial Protection Bureau"
                      width="262"
                      height="66">
                 <noscript>
-                    <img class="logo logo__no-js"
+                    <img class="header_logo logo__no-js"
                          src="/static/img/logo.png"
                          alt="Consumer Financial Protection Bureau"
                          width="262"
