--- a/docs/layout/main.ie.html
+++ b/docs/layout/main.ie.html
@@ -79,14 +79,14 @@
           <h3 class="docs-pattern_header">Logo</h3>
           <section class="docs-pattern_pattern">
 <a href="/">
-    <img class="logo u-js-only"
+    <img class="header_logo u-js-only"
          src="../../static/img/logo.svg"
          onerror="this.onerror=null;this.src='/static/img/logo.png';"
          alt="Consumer Financial Protection Bureau"
          width="262"
          height="66">
     <noscript>
-        <img class="logo logo__no-js"
+        <img class="header_logo logo__no-js"
              src="../../static/img/logo.png"
              alt="Consumer Financial Protection Bureau"
              width="262"
@@ -97,14 +97,14 @@
           </section>
           <footer class="docs-pattern_footer">
             <pre class="docs-code docs-pattern_markup"><code data-language="html">&lt;a href=&quot;/&quot;&gt;
-    &lt;img class=&quot;logo u-js-only&quot;
+    &lt;img class=&quot;header_logo u-js-only&quot;
          src=&quot;../../static/img/logo.svg&quot;
          onerror=&quot;this.onerror=null;this.src='/static/img/logo.png';&quot;
          alt=&quot;Consumer Financial Protection Bureau&quot;
          width=&quot;262&quot;
          height=&quot;66&quot;&gt;
     &lt;noscript&gt;
-        &lt;img class=&quot;logo logo__no-js&quot;
+        &lt;img class=&quot;header_logo logo__no-js&quot;
              src=&quot;../../static/img/logo.png&quot;
              alt=&quot;Consumer Financial Protection Bureau&quot;
              width=&quot;262&quot;
@@ -112,7 +112,7 @@
     &lt;/noscript&gt;
 &lt;/a&gt;</code></pre>
             <form action="http://codepen.io/pen/define" method="POST" target="_blank" class="docs-pattern_footer-edit">
-              <input type="hidden" name="data" value="{&amp;quot;css&amp;quot;:&amp;quot;body { padding: 1em; }&amp;quot;,&amp;quot;css_external&amp;quot;:&amp;quot;http://cfpb.github.io/cfgov-refresh/static/css/main.ie.css&amp;quot;,&amp;quot;html&amp;quot;:&amp;quot;\n&lt;a href=\&amp;quot;/\&amp;quot;&gt;\n    &lt;img class=\&amp;quot;logo u-js-only\&amp;quot;\n         src=\&amp;quot;../../static/img/logo.svg\&amp;quot;\n         onerror=\&amp;quot;this.onerror=null;this.src=&amp;apos;/static/img/logo.png&amp;apos;;\&amp;quot;\n         alt=\&amp;quot;Consumer Financial Protection Bureau\&amp;quot;\n         width=\&amp;quot;262\&amp;quot;\n         height=\&amp;quot;66\&amp;quot;&gt;\n    &lt;noscript&gt;\n        &lt;img class=\&amp;quot;logo logo__no-js\&amp;quot;\n             src=\&amp;quot;../../static/img/logo.png\&amp;quot;\n             alt=\&amp;quot;Consumer Financial Protection Bureau\&amp;quot;\n             width=\&amp;quot;262\&amp;quot;\n             height=\&amp;quot;66\&amp;quot;&gt;\n    &lt;/noscript&gt;\n&lt;/a&gt;\n&amp;quot;}">
+              <input type="hidden" name="data" value="{&amp;quot;css&amp;quot;:&amp;quot;body { padding: 1em; }&amp;quot;,&amp;quot;css_external&amp;quot;:&amp;quot;http://cfpb.github.io/cfgov-refresh/static/css/main.ie.css&amp;quot;,&amp;quot;html&amp;quot;:&amp;quot;\n&lt;a href=\&amp;quot;/\&amp;quot;&gt;\n    &lt;img class=\&amp;quot;header_logo u-js-only\&amp;quot;\n         src=\&amp;quot;../../static/img/logo.svg\&amp;quot;\n         onerror=\&amp;quot;this.onerror=null;this.src=&amp;apos;/static/img/logo.png&amp;apos;;\&amp;quot;\n         alt=\&amp;quot;Consumer Financial Protection Bureau\&amp;quot;\n         width=\&amp;quot;262\&amp;quot;\n         height=\&amp;quot;66\&amp;quot;&gt;\n    &lt;noscript&gt;\n        &lt;img class=\&amp;quot;header_logo logo__no-js\&amp;quot;\n             src=\&amp;quot;../../static/img/logo.png\&amp;quot;\n             alt=\&amp;quot;Consumer Financial Protection Bureau\&amp;quot;\n             width=\&amp;quot;262\&amp;quot;\n             height=\&amp;quot;66\&amp;quot;&gt;\n    &lt;/noscript&gt;\n&lt;/a&gt;\n&amp;quot;}">
               <input type="submit" value="edit on codepen.io" class="docs-pattern_footer-edit-btn">
             </form>
             <ul class="docs-notes">
@@ -125,7 +125,7 @@
         <div class="docs-pattern">
           <h3 class="docs-pattern_header">Miscellaneous stuff (top right)</h3>
           <section class="docs-pattern_pattern">
-<div style="position: relative;">
+<div style="position: relative; min-height: 80px;">
     <div class="header_misc">
         Contact us: <a class="header_misc_tel" href="tel:8554112372">(855) 411-2372</a>
         <a class="header_misc_es">Español</a>
@@ -134,34 +134,34 @@
 
           </section>
           <footer class="docs-pattern_footer">
-            <pre class="docs-code docs-pattern_markup"><code data-language="html">&lt;div style=&quot;position: relative;&quot;&gt;
+            <pre class="docs-code docs-pattern_markup"><code data-language="html">&lt;div style=&quot;position: relative; min-height: 80px;&quot;&gt;
     &lt;div class=&quot;header_misc&quot;&gt;
         Contact us: &lt;a class=&quot;header_misc_tel&quot; href=&quot;tel:8554112372&quot;&gt;(855) 411-2372&lt;/a&gt;
         &lt;a class=&quot;header_misc_es&quot;&gt;Español&lt;/a&gt;
     &lt;/div&gt;
 &lt;/div&gt;</code></pre>
             <form action="http://codepen.io/pen/define" method="POST" target="_blank" class="docs-pattern_footer-edit">
-              <input type="hidden" name="data" value="{&amp;quot;css&amp;quot;:&amp;quot;body { padding: 1em; }&amp;quot;,&amp;quot;css_external&amp;quot;:&amp;quot;http://cfpb.github.io/cfgov-refresh/static/css/main.ie.css&amp;quot;,&amp;quot;html&amp;quot;:&amp;quot;\n&lt;div style=\&amp;quot;position: relative;\&amp;quot;&gt;\n    &lt;div class=\&amp;quot;header_misc\&amp;quot;&gt;\n        Contact us: &lt;a class=\&amp;quot;header_misc_tel\&amp;quot; href=\&amp;quot;tel:8554112372\&amp;quot;&gt;(855) 411-2372&lt;/a&gt;\n        &lt;a class=\&amp;quot;header_misc_es\&amp;quot;&gt;Español&lt;/a&gt;\n    &lt;/div&gt;\n&lt;/div&gt;\n&amp;quot;}">
+              <input type="hidden" name="data" value="{&amp;quot;css&amp;quot;:&amp;quot;body { padding: 1em; }&amp;quot;,&amp;quot;css_external&amp;quot;:&amp;quot;http://cfpb.github.io/cfgov-refresh/static/css/main.ie.css&amp;quot;,&amp;quot;html&amp;quot;:&amp;quot;\n&lt;div style=\&amp;quot;position: relative; min-height: 80px;\&amp;quot;&gt;\n    &lt;div class=\&amp;quot;header_misc\&amp;quot;&gt;\n        Contact us: &lt;a class=\&amp;quot;header_misc_tel\&amp;quot; href=\&amp;quot;tel:8554112372\&amp;quot;&gt;(855) 411-2372&lt;/a&gt;\n        &lt;a class=\&amp;quot;header_misc_es\&amp;quot;&gt;Español&lt;/a&gt;\n    &lt;/div&gt;\n&lt;/div&gt;\n&amp;quot;}">
               <input type="submit" value="edit on codepen.io" class="docs-pattern_footer-edit-btn">
             </form>
             <ul class="docs-notes">
-              <li>The outer div with the inline `position: relative;` style is only for demonstration purposes in these docs, because the `.header_misc` div is positioned absolutely.</li>
+              <li>The outer div with the inline style is only for demonstration purposes in these docs, because the `.header_misc` div is positioned absolutely.</li>
             </ul>
           </footer>
         </div>
       </div>
       <div class="docs-css">
         <pre class="docs-code"><code data-language="css">
-.logo {
+.header_logo {
   margin: 30px 15px 1.25em 15px;
   vertical-align: middle;
 }
 
-.logo__no-js {
+.header_logo__no-js {
   display: none;
 }
 
-.no-js .logo__no-js {
+.no-js .header_logo__no-js {
   display: block;
 }
 
@@ -365,6 +365,12 @@
   color: #002d72;
 }
 
+/* Sliding nav for portrait tablets and smaller
+   ========================================================================== */
+
+/* Horizontal mega menu for landscape tablets and larger
+   ========================================================================== */
+
 .sliding-nav_trigger {
   display: none;
 }
@@ -415,7 +421,8 @@
   -webkit-transform: translate3d(0, 0, 0);
 }
 
-.desktop-menu_full-wrapper[aria-expanded=&quot;true&quot;] {
+.desktop-menu_full-wrapper[aria-expanded=&quot;true&quot;],
+.no-js .list_item:hover .desktop-menu_full-wrapper {
   z-index: 200;
   max-height: 15em;
   -webkit-transform: translate3d(0, 0, 0);
@@ -436,11 +443,6 @@
   background: #f8f8f8;
   border-top: 1px solid #babbbd;
   border-bottom: 4px solid #babbbd;
-}
-
-.desktop-menu_full-wrapper &gt; ul {
-  margin-top: 0;
-  margin-bottom: 0;
 }
 
 .desktop-menu_vertical-list a,
