--- a/static/css/layout.less
+++ b/static/css/layout.less
@@ -44,14 +44,14 @@
     - name: Logo
       markup: |
         <a href="/">
-            <img class="logo u-js-only"
+            <img class="header_logo u-js-only"
                  src="../../static/img/logo.svg"
                  onerror="this.onerror=null;this.src='/static/img/logo.png';"
                  alt="Consumer Financial Protection Bureau"
                  width="262"
                  height="66">
             <noscript>
-                <img class="logo logo__no-js"
+                <img class="header_logo logo__no-js"
                      src="../../static/img/logo.png"
                      alt="Consumer Financial Protection Bureau"
                      width="262"
@@ -67,21 +67,21 @@
         - "The path in the `src` attribute has been adjusted for these docs."
     - name: Miscellaneous stuff (top right)
       markup: |
-        <div style="position: relative;">
+        <div style="position: relative; min-height: 80px;">
             <div class="header_misc">
                 Contact us: <a class="header_misc_tel" href="tel:8554112372">(855) 411-2372</a>
                 <a class="header_misc_es">Español</a>
             </div>
         </div>
       notes:
-        - "The outer div with the inline `position: relative;` style is only for
-           demonstration purposes in these docs, because the `.header_misc` div
-           is positioned absolutely."
+        - "The outer div with the inline style is only for demonstration
+           purposes in these docs, because the `.header_misc` div is positioned
+           absolutely."
   tags:
     - cfgov-layout
 */
 
-.logo {
+.header_logo {
     margin: @grid_gutter-width
             (@grid_gutter-width / 2)
             unit(20px / @base-font-size-px, em)
@@ -95,11 +95,11 @@
     });
 }
 
-.logo__no-js {
+.header_logo__no-js {
     display: none;
 }
 
-.no-js .logo__no-js {
+.no-js .header_logo__no-js {
     display: block;
 }
 
@@ -120,8 +120,8 @@
         &_tel {
             padding-right: @grid_gutter-width / 2;
             border-right: 1px solid @gray-50;
+            // subtracting typical inline horizonal whitespace from right margin
             margin-right: unit(@grid_gutter-width / 2 / @base-font-size-px, em) - 0.25em;
-                // subtracting typical inline horizonal whitespace above
             .u-link__colors(@darkgray);
         }
 
@@ -161,7 +161,9 @@
     .u-link__colors(@pacific, @pacific, @pacific-50, @pacific, @navy);
 }
 
-// ============================================================ SLIDING NAV TEST
+
+/* Sliding nav for portrait tablets and smaller
+   ========================================================================== */
 
 .respond-to-max(800px, {
 
@@ -194,8 +196,7 @@
             }
         }
 
-        & .list_item > a,
-        & .list_item > span {
+        & .list_item a {
             display: block;
             padding: (@grid_gutter-width / 2)
                      @grid_gutter-width
@@ -217,21 +218,20 @@
             background: @gray-10;
             color: @darkgray;
         }
-        & > .list_item > .list_link__disabled {
+
+        & .list_item .list_link__disabled {
             background: @gray-20 !important;
         }
 
         // Two levels deep
-        & .list-expanding .list-expanding_list-item > a,
-        & .list-expanding .list-expanding_list-item > span {
+        & .list-expanding .list-expanding_list-item a {
             padding-left: @grid_gutter-width;
             background: @gray-10;
             font-size: 1em;
         }
 
         // Three levels deep
-        & .list-expanding .list-expanding .list-expanding_list-item > a,
-        & .list-expanding .list-expanding .list-expanding_list-item > span {
+        & .list-expanding .list-expanding .list-expanding_list-item a {
             padding-left: @grid_gutter-width * 1.5;
             background: @gray-5;
         }
@@ -269,13 +269,11 @@
     }
 
     .sliding-nav_page {
-        float: left;
-        -webkit-box-sizing: border-box;
-           -moz-box-sizing: border-box;
-                box-sizing: border-box;
+        box-sizing: border-box;
         width: 100%;
+        float: left;
         background: @white;
-        -webkit-transition: .2s margin-right ease-in, .2s box-shadow ease-in;
+        transition: .2s margin-right ease-in, .2s box-shadow ease-in;
     }
     .is-open .sliding-nav_page {
         border-left: 1px solid @gray-80;
@@ -354,7 +352,9 @@
 
 });
 
-// =========================================================== DESKTOP MENU TEST
+
+/* Horizontal mega menu for landscape tablets and larger
+   ========================================================================== */
 
 .respond-to-min(801px, {
 
@@ -388,8 +388,6 @@
             padding-bottom: @grid_gutter-width - 6px;
             border-bottom: 6px solid @green;
             color: @green;
-            // transition: 0.1s padding-bottom linear,
-            //             0.1s border-bottom linear;
         }
     }
 
@@ -401,7 +399,6 @@
     }
 
     // Hide only when js is available
-    // .js .desktop-menu_full-wrapper {}
     .desktop-menu_full-wrapper {
         width: 100%;
         max-height: 0;
@@ -414,9 +411,10 @@
 
     // Expand the menu by looking for aria attributes.
     // This will help us to keep our eye on a11y.
-    .desktop-menu_full-wrapper[aria-expanded="true"] {
+    // The .no-js selector enables simple hover menu support for users without JavaScript
+    .desktop-menu_full-wrapper[aria-expanded="true"],
+    .no-js .list_item:hover .desktop-menu_full-wrapper {
         z-index: 200;
-        //min-height: 21em;
         max-height: 15em;
         -webkit-transform: translate3d(0,0,0); // Maybe this will kick on the gpu?
     }
@@ -436,11 +434,6 @@
         background: @gray-5;
         border-top: 1px solid @gray-50;
         border-bottom: 4px solid @gray-50;
-    }
-
-    .desktop-menu_full-wrapper > ul {
-        margin-top: 0;
-        margin-bottom: 0;
     }
 
     .desktop-menu_vertical-list a,
