--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7444,14 +7444,14 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
     - name: Logo
       markup: |
         <a href="/">
-            <img class="logo u-js-only"
+            <img class="header_logo u-js-only"
                  src="../../static/img/logo.svg"
                  onerror="this.onerror=null;this.src='/static/img/logo.png';"
                  alt="Consumer Financial Protection Bureau"
                  width="262"
                  height="66">
             <noscript>
-                <img class="logo logo__no-js"
+                <img class="header_logo logo__no-js"
                      src="../../static/img/logo.png"
                      alt="Consumer Financial Protection Bureau"
                      width="262"
@@ -7467,30 +7467,30 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
         - "The path in the `src` attribute has been adjusted for these docs."
     - name: Miscellaneous stuff (top right)
       markup: |
-        <div style="position: relative;">
+        <div style="position: relative; min-height: 80px;">
             <div class="header_misc">
                 Contact us: <a class="header_misc_tel" href="tel:8554112372">(855) 411-2372</a>
                 <a class="header_misc_es">Español</a>
             </div>
         </div>
       notes:
-        - "The outer div with the inline `position: relative;` style is only for
-           demonstration purposes in these docs, because the `.header_misc` div
-           is positioned absolutely."
+        - "The outer div with the inline style is only for demonstration
+           purposes in these docs, because the `.header_misc` div is positioned
+           absolutely."
   tags:
     - cfgov-layout
 */
 
-.logo {
+.header_logo {
   margin: 30px 15px 1.25em 15px;
   vertical-align: middle;
 }
 
-.logo__no-js {
+.header_logo__no-js {
   display: none;
 }
 
-.no-js .logo__no-js {
+.no-js .header_logo__no-js {
   display: block;
 }
 
@@ -7691,6 +7691,12 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   color: #002d72;
 }
 
+/* Sliding nav for portrait tablets and smaller
+   ========================================================================== */
+
+/* Horizontal mega menu for landscape tablets and larger
+   ========================================================================== */
+
 .sliding-nav_trigger {
   display: none;
 }
@@ -7741,7 +7747,8 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   -webkit-transform: translate3d(0, 0, 0);
 }
 
-.desktop-menu_full-wrapper[aria-expanded="true"] {
+.desktop-menu_full-wrapper[aria-expanded="true"],
+.no-js .list_item:hover .desktop-menu_full-wrapper {
   z-index: 200;
   max-height: 15em;
   -webkit-transform: translate3d(0, 0, 0);
@@ -7762,11 +7769,6 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   background: #f8f8f8;
   border-top: 1px solid #babbbd;
   border-bottom: 4px solid #babbbd;
-}
-
-.desktop-menu_full-wrapper > ul {
-  margin-top: 0;
-  margin-bottom: 0;
 }
 
 .desktop-menu_vertical-list a,
